cmake_minimum_required(VERSION 3.30)
project(Proyect_Prueba)

set(CMAKE_CXX_STANDARD 20)

add_executable(Proyect_Prueba main.cpp
        Par_Impar.cpp
        Par_Impar.h
        Fibonacci.cpp
        Fibonacci.h
        Factorial.cpp
        Factorial.h
        Numero_Reverso.cpp
        Numero_Reverso.h
        Decimal_Binario.cpp
        Decimal_Binario.h
        Voltear_Cadena.cpp
        Voltear_Cadena.h
        Binario_Decimal.cpp
        Binario_Decimal.h
        Palindroma.cpp
        Palindroma.h
        Division.cpp
        Division.h
        Multiplicasion.cpp
        Multiplicasion.h)
